# csl-inflect

./: CITATION.cff  CLAUDE.md  README.md  pyproject.toml
nominals/pysanskritv2/tables/: decline_file.py
