[project]
name = "csl-inflect"
version = "0.1.0"
description = "Generates declensions and conjugations for CDSL headwords."
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "nominals/pydecl",
  "nominals/pysanskritv2/tables",
]
